--- a/component/analytics/build.xml
+++ b/component/analytics/build.xml
@@ -24,6 +24,8 @@
     <property name="sensorType2_dir" value="batterystatussensor"/>
     <property name="sensorType3_dir" value="cpuusagesensor"/>
     <property name="sensorType4_dir" value="laptop"/>
+    <property name="sensorType5_dir" value="memoryspacesensor"/>
+    <property name="sensorType6_dir" value="diskspacesensor"/>
     <target name="clean">
         <delete dir="${target-dir}" />
     </target>
@@ -40,6 +42,12 @@
         </zip>
         <zip destfile="${target-dir}/${sensorType4_dir}.car">
             <zipfileset dir="${src-dir}/${sensorType4_dir}"/>
+        </zip>
+        <zip destfile="${target-dir}/${sensorType5_dir}.car">
+            <zipfileset dir="${src-dir}/${sensorType5_dir}"/>
+        </zip>
+        <zip destfile="${target-dir}/${sensorType6_dir}.car">
+            <zipfileset dir="${src-dir}/${sensorType6_dir}"/>
         </zip>
     </target>
 </project>
